--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
 .dropdown-item:hover{
   background-color: rgba(65, 65, 65, 0.822);
-} 
+}
+.cart-icon{
+  margin: 0 20px 0 5px;
+  cursor: pointer;
+}
+.item-list-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 27px;
+  padding-top: 5px;
+  color: rgb(255, 105, 51);
+}
+@media (max-width: 992px) {
+  .cart-icon{
+    margin: 10px 0 5px 0;
+  }
+}
