--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
+/* Navbar */
 .dropdown-item:hover{
-  background-color: rgba(65, 65, 65, 0.822);
+  background-color: rgba(65, 65, 65, .822);
 }
 .cart-icon{
   margin: 0 20px 0 5px;
@@ -17,4 +18,58 @@
   .cart-icon{
     margin: 10px 0 5px 0;
   }
+}
+/* ItemCount */
+.container-contador{
+  background-color: rgb(43, 43, 43);
+  width: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+  border-radius: 5px;
+}
+.btn-suma,.btn-resta{
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  color: rgb(245, 245, 245);
+  margin: auto;
+}
+.btn-suma{
+  font-size: 19px;
+  padding-bottom: 2px;
+}
+.btn-resta{
+  font-size: 23px;
+  padding: 0 0 2px 1px;
+}
+.btn-suma:active,.btn-resta:active{
+  transform: scale(.9);
+}
+.contador{
+  margin: 0 4px;
+}
+.container-btn-add{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px 0;
+  background-color: rgb(138, 180, 53);
+  border-radius: 5px;
+  padding: 4px 8px;
+  color: #fff;
+  cursor: pointer;
+}
+.container-btn-add:hover{
+  background-color: rgb(148, 199, 46);
+  box-shadow: 4px 4px 12px rgba(65, 65, 65, .6);
+}
+.btn-add{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+  border: none;
+  background: transparent;
+  color: #fff;
 }
