--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
   align-items: center;
   margin: 27px;
   padding-top: 5px;
-  color: rgb(255, 105, 51);
 }
 @media (max-width: 992px) {
   .cart-icon{
@@ -51,6 +50,7 @@
 .contador{
   margin: 0 4px;
 }
+/* Btn añadir */
 .container-btn-add{
   display: flex;
   justify-content: center;
