--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   margin: 0 20px 0 5px;
   cursor: pointer;
 }
-.item-list-container{
+.item-list-container,.item-detail-container{
   display: flex;
   flex-direction: column;
   align-items: center;
