--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -7,7 +7,7 @@
 .cart-items{
     display: flex;
     justify-content: space-evenly;
-    height: 130px;
+    height: 150px;
     border: 1px solid black;
 }
 .cart-description{
@@ -19,21 +19,24 @@
     margin-right: 25px;
 }
 .imgs-cart{
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
     width: 170px;
-    height: 140px;
-    object-fit: contain;
+    height: 150px;
 }
 .imgs-cart img{
-    width: 150px;
-    height: 130px;
+    width: 170px;
+    height: 170px;
+    object-fit: contain;
 }
-.holis{
+.prod-subtotal{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.holis p,.btn-vaciar{
+.prod-subtotal p,.btn-vaciar{
     margin-top: 2px;
     font-size: 18px;
 }
