--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   cursor: pointer;
 }
 .item-list{
-  column-gap: 50px; 
+  column-gap: 30px; 
   display: flex;
   flex-wrap: wrap;
 }
@@ -23,7 +23,7 @@
     margin: 10px 0 5px 0;
   }
 }
-/* ItemCount */
+/* item count */
 .container-contador{
   background-color: rgb(43, 43, 43);
   width: 70px;
@@ -55,4 +55,46 @@
 }
 .contador{
   margin: 0 4px;
+}
+/* Form */
+.form-purchase{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.form-purchase label{
+  margin: 7px 0;  
+}
+.form-purchase input{
+  width: 60%;
+  padding: 3px;
+}
+.form-purchase button{
+  margin-top: 15px;
+}
+.input-error{
+  color: rgb(226, 11, 11);
+  font-size: 15px;
+}
+.submitted-form{
+  margin-top: 13px;
+}
+.submitted-form small{
+  color: rgb(34, 214, 2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+}
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #272b2e;
+  color:rgb(245, 245, 245);
+  height: 100px;
+}
+footer h4{
+  font-size: 18px;
 }
