--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap');
+*{
+  list-style: none;
+}
+html{
+  scroll-behavior: smooth;
+}
 /* Navbar */
 .dropdown-item:hover{
   background-color: rgba(65, 65, 65, .822);
@@ -5,18 +13,6 @@
 .cart-icon{
   margin: 0 20px 0 5px;
   cursor: pointer;
-}
-.item-list{
-  column-gap: 30px; 
-  display: flex;
-  flex-wrap: wrap;
-}
-.item-list-container,.item-detail-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 27px;
-  padding-top: 5px;
 }
 @media (max-width: 992px) {
   .cart-icon{
@@ -26,9 +22,8 @@
 /* item count */
 .container-contador{
   background-color: rgb(43, 43, 43);
-  width: 70px;
-  height: 31px;
-  margin: 4px 12px 6px 0;
+  width: 90px;
+  height: 37px;
   display: flex;
   align-items: center;
   border-radius: 7px;
@@ -40,61 +35,19 @@
   background-color: transparent;
   padding: 0;
   color: rgb(245, 245, 245);
-  margin: auto;
+  margin: 0 auto;
 }
 .btn-suma{
-  font-size: 19px;
-  padding-bottom: 2px;
+  font-size: 25px;
+  padding-top: 1px;
 }
 .btn-resta{
-  font-size: 23px;
-  padding: 0 0 2px 1px;
+  font-size: 31px;
+  padding-top: 2px;
 }
 .btn-suma:active,.btn-resta:active{
   transform: scale(.9);
 }
 .contador{
   margin: 0 4px;
-}
-/* Form */
-.form-purchase{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.form-purchase label{
-  margin: 7px 0;  
-}
-.form-purchase input{
-  width: 60%;
-  padding: 3px;
-}
-.form-purchase button{
-  margin-top: 15px;
-}
-.input-error{
-  color: rgb(226, 11, 11);
-  font-size: 15px;
-}
-.submitted-form{
-  margin-top: 13px;
-}
-.submitted-form small{
-  color: rgb(34, 214, 2);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 15px;
-}
-footer{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #272b2e;
-  color:rgb(245, 245, 245);
-  height: 100px;
-}
-footer h4{
-  font-size: 18px;
 }
