--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,42 +1,124 @@
+.container-cart{
+    background-color: rgb(60, 60, 60);
+    min-height: 60vh;
+    padding-top: 10px;
+}
 .cart-vacio{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    padding-top: 40px;
+    color: rgb(236, 236, 236);
 }
 .cart-items{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     height: 150px;
-    border: 1px solid black;
+    border-bottom: 1px solid rgb(165, 165, 165);
+    border-radius: 20px;
+    width: 90%;
+    margin: auto;
+    background-color: rgb(39, 39, 39);
 }
 .cart-description{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 10px;
 }
 .cart-description h5{
-    margin-right: 25px;
+    margin-right: 30px;
+    color: rgb(232, 232, 232);
 }
-.imgs-cart{
+.imgs-cart, .cart-items .tshirt{
     display: flex;
     align-items: center;
     padding-left: 15px;
     width: 170px;
     height: 150px;
 }
+.cart-items .tshirt{
+    height: 100px;
+    padding-bottom: 60px;
+}
 .imgs-cart img{
     width: 170px;
     height: 170px;
     object-fit: contain;
 }
-.prod-subtotal{
+.cart-items .tshirt img{
+    height: 130px;
+}
+.total-purchase{
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    padding: 35px 0;
+    color: rgb(232, 232, 232);
 }
-.prod-subtotal p,.btn-vaciar{
-    margin-top: 2px;
+.btn-clear{
+    margin-top: 0px;
     font-size: 18px;
+    margin-bottom: 10px;
+}
+@media screen and (max-width: 800px){
+    .container-cart{
+        min-height: 70vh;
+    }
+    .cart-description{
+        flex-direction: column;
+    }
+    .cart-items .tshirt{
+        height: 110px;
+    }
+    .tshirt img{
+        margin-top: 60px;
+    }
+}
+@media screen and (max-width: 490px){
+    .cart-items{
+        width: 100%;
+    }
+    .imgs-cart{
+        padding-left: 2px;
+        width: 100px;
+        height: 130px;
+    }
+    .imgs-cart img{
+        width: 120px;
+        height: 140px;
+    }
+    .cart-items .tshirt{
+        height: 130px;
+        padding-left: 2px;
+        width: 130px;
+    }
+    .cart-items .tshirt img{
+        height: 100px;
+        width: 130px;
+        object-fit: contain;
+        margin: 45px 0 0 0;
+    }
+    .cart-description h5{
+        font-size: 16px;
+    }
+}
+@media screen and (max-width: 320px){
+    .cart-description{
+        margin-left: -10px;
+    }
+    .imgs-cart{
+        margin: 0 15px 0 -10px;
+        width: 80px;
+        height: 120px;
+    }
+    .imgs-cart img{
+        width: 100px;
+        height: 110px;
+    }
+    .cart-description h5{
+        font-size: 14px;
+    }
 }
