--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,13 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
-
 .container-hero{
     position: relative;
+}
+.title-hero{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 22vh 0 0 80px;
 }
 .container-hero:before{
     content: '';
     position: absolute;
-    width: 55vw;
-    height: 70vh;
+    width: 100%;
+    height: 85vh;
     top: 0;
     left: 0;
     background: 
@@ -16,22 +21,100 @@
     rgba(0, 0, 0, 0.13));
     background-blend-mode: soft-light;
 }
-.uno{
-    color: rgb(218, 216, 216);
-    font-family: 'Alfa Slab One', cursive;
-}
-.container-hero h1{
-    font-family: 'Alfa Slab One', cursive;
+.container-hero h2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
     width: 400px;
-    margin: 100px 0 0 80px;
-    position: absolute;
-    color: rgb(233, 31, 31);
+    color: rgb(182, 182, 182);
+    font-size: 40px;
 }
-.img-hero{    
-    overflow-x: hidden;
+.container-hero button{
+    position: absolute;
+    margin: 45vh 0 0 0;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    width: 120px;
+    height: 35px;
+    cursor: pointer;
+    border: 2px solid rgb(196, 8, 8);
+    -webkit-border-radius: 40px;
+    border-radius: 40px;
+    color: rgb(196, 8, 8);
+    text-align: center;
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    letter-spacing: 1px;
+    background: rgba(0,0,0,0);
+    -webkit-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
+    -moz-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
+    -o-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
+    transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
+}
+.container-hero button:hover{
+    color: #fff;
+    background-color: rgb(196, 8, 8);
+}
+.container-hero button:active{
+    border: 2px solid rgb(221, 4, 4);
+    background: rgb(221, 4, 4);
+    -webkit-transition: none;
+    -moz-transition: none;
+    -o-transition: none;
+    transition: none;
 }
 .img-hero img{
-    width: 100vw;
-    height: 70vh;
+    width: 100%;
+    height: 85vh;
+    top: 0;
+    left: 0;
     object-fit: cover;
+    object-position: left center;
+}
+@media screen and (max-width: 698px){
+    .container-hero:before{
+        width: 100%;
+        height: 70vh;
+    }
+    .title-hero{
+        margin: 14vh 0 0 50px;
+    }
+    .container-hero h2{
+        width: 320px;
+    }
+    .img-hero img{
+        height: 70vh;
+        object-position: 20%;
+    }
+}
+@media screen and (max-width: 558px){
+    .title-hero{
+        margin-left: 25px;
+    }
+    .container-hero h2{
+        width: 250px;
+        font-size: 32px;
+    }
+}
+@media screen and (min-height: 1020px){
+    .title-hero{
+        margin-top: 20vh;
+    }
+    .container-hero h2{
+        font-size: 40px;
+        width: 400px;
+    }
+    .container-hero button{
+        margin-top: 40vh;
+        width: 148px;
+        height: 41px;
+    }
+}
+@media screen and (max-height: 470px){
+    .title-hero{
+        margin-top: 10vh;
+    }
+    .container-hero button{
+        margin-top: 62vh;
+    }
 }
