--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -23,10 +23,18 @@
 }
 .container-hero h2{
     font-family: 'Montserrat', sans-serif;
-    font-weight: 800;
-    width: 400px;
-    color: rgb(182, 182, 182);
+    font-style: italic;
+    width: 420px;
+    color: rgb(226, 226, 226);
     font-size: 40px;
+}
+.title-change{
+    font-family: 'Montserrat', sans-serif;
+    font-style: italic;
+    background-color: rgba(196, 0, 0, 0.619);
+    padding: 0 7px;
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 .container-hero button{
     position: absolute;
